--- a/app/views/mockup/home.html
+++ b/app/views/mockup/home.html
@@ -1,3 +1,102 @@
-<div>
-  ciao
+<div class="container-fluid controller js_main">
+    <div class="row">
+        <div class="col-md-12">
+            <div class="nav-languages">
+                <ul class="nav-languages__list">
+                    <li><a href="#">IT</a></li>
+                    <li><a href="#">DE</a></li>
+                    <li><a href="#">EN</a></li>
+                </ul>
+            </div>
+            <!-- Splash -->
+            <div class="splash">
+                <div class="splash__content">
+                    <div class="splash__logo"><img src="<%= image_path 'home/splash-logo.png' %>" alt="" /></div>
+                    <h1 class="splash__title">Il magico mondo della Spezialbier-Brauerei FORST ti dà il benvenuto.</h1>
+                    <p class="splash__description">
+                        Qui puoi ordinare una delle nostre birre di qualità superiore
+                        <br /> e scoprire la nostra linea di abbigliamento e accessori.
+                        <br /> Lasciati ispirare dai nostri prodotti e ritrova la magia del mondo FORST.
+                    </p>
+                </div>
+                <img data-fit="true" data-align="top center" class="splash__background coverized" src="<%= image_path 'home/splash.jpg' %>" alt="" />
+            </div>
+            <!-- // Splash -->
+        </div>
+    </div>
+    <!-- Boxes -->
+    <div class="section-boxes">
+        <div class="row">
+            <div class="col-sm-4 col-md-4">
+                <!-- Section-box -->
+                <div class="section-box">
+                    <a class="section-box__link" href="#" class="Il merchandising">
+                              <img class="section-box__image" src="<%= image_path 'home/box-merchandising-background.png' %>" alt="" />
+                              <div class="section-box__content">
+                                  <img class="section-box__icon" src="<%= image_path 'home/box-merchandising-icon.png' %>" alt="" />
+                                  <h1 class="section-box__title">Il merchandising</h1>
+                              </div>
+                          </a>
+                </div>
+                <!-- // Section-box -->
+            </div>
+            <div class="col-sm-4 col-md-4">
+                <!-- Section-box -->
+                <div class="section-box">
+                    <a class="section-box__link" href="#" class="Le birre">
+                              <img class="section-box__image" src="<%= image_path 'home/box-birre-background.png' %>" alt="" />
+                              <div class="section-box__content">
+                                  <img class="section-box__icon" src="<%= image_path 'home/box-birre-icon.png' %>" alt="" />
+                                  <h1 class="section-box__title">Le birre</h1>
+                              </div>
+                          </a>
+                </div>
+                <!-- // Section-box -->
+            </div>
+            <div class="col-sm-4 col-md-4">
+                <!-- Section-box -->
+                <div class="section-box">
+                    <a class="section-box__link" href="#" class="La birra di Natale">
+                              <img class="section-box__image" src="<%= image_path 'home/box-birra-natale-background.png' %>" alt="" />
+                              <div class="section-box__content">
+                                  <img class="section-box__icon" src="<%= image_path 'home/box-birra-natale-icon.png' %>" alt="" />
+                                  <h1 class="section-box__title">La birra di Natale</h1>
+                              </div>
+                          </a>
+                </div>
+                <!-- // Section-box -->
+            </div>
+        </div>
+    </div>
+    <!-- // Boxes -->
 </div>
+<div class="banner-product">
+    <img class="banner-product__background" src="<%= image_path 'home/banner-background.png' %>" alt="" />
+    <div class="banner-product__image-container">
+        <img class="banner-product__product" src="<%= image_path 'home/banner-product.png' %>" alt="" />
+    </div>
+    <div class="banner-product__container">
+        <h1 class="banner-product__title">La birra di Natale 2015</h1>
+        <p class="banner-product__description">
+            La dodicesima edizione della Birra di Natale, disponibile nell’elegante bottiglia da 2 litri a forma di sifone. Per la prima volta in vetro, raffigura lo stabilimento di Birra FORST in veste natalizia.
+        </p>
+        <a href="#" class="btn-follow">SCOPRI DI PIÚ</a>
+    </div>
+</div>
+<section class="big-footer">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-4"></div>
+            <div class="col-md-4"></div>
+            <div class="col-md-4"></div>
+        </div>
+    </div>
+</section>
+<section class="footer">
+    <img class="footer__logo" src="<%= image_path 'layout/logo-small.png' %>" alt="" />
+    <ul class="footer__nav">
+        <li>© Copyright Forstshop</li>
+        <li><a href="#" title="Informativa sulla privacy">Informativa sulla privacy</a></li>
+        <li><a href="#" title="Condizioni generali di vendita">Condizioni generali di vendita</a></li>
+    </ul>
+</section>
