--- a/app/assets/stylesheets/components/components.sass
+++ b/app/assets/stylesheets/components/components.sass
@@ -1,201 +1,28 @@
+@import navigation
+@import banner-product
+@import menu-list
+@import section-boxes
+@import splash
+@import footer
+
 // Nav Languages
 .nav-languages
   position: absolute
   z-index: 5
 
   &__list
-
 // END Nav Languages
 
-// Splash Home
-.splash
-  position: relative
-  overflow: hidden
-  height: 650px
-  width: 100%
-  top: 0
-  left: 0
+// Big Footer
+.big-footer
+  background: $color-green-forst
+  padding: 40px 0 60px 0
 
-  &__content
-    position: relative
-    z-index: 2
-    text-align: center
-
-  &__logo
-
-  &__title
-    color: #FFFFFF
-    font-weight: 700
-    font-size: 24px
-    +text-shadow(0 0 27px rgba(0,0,0,.7))
-
-  &__description
-    color: #FFFFFF
-    font-weight: 300
-    font-size: 22px
-    line-height: 29px
-
-  &__background
-    position: absolute
-    z-index: 1
-    left: 0
-    top: 0
-// END Splash Home
-
-// Section Box
-.section-boxes
-  padding: 8px
-
-.section-box
-  position: relative
-  overflow: hidden
-
-  &__content
-    font-size: 62.5%
-    text-align: center
-    position: absolute
-    width: 100%
-    top: 28%
-    z-index: 2
-
-  &__link
-    width: 100%
-    height: 100%
-    left: 0
-    top: 0
-    display: block
-
-    &:hover
-      .section-box__icon
-        +scale(1.2)
-
-  &__icon
-    +transition(all .2s ease-out)
-    width: 16%
-
-  &__image
-    position: relative
-    width: 100%
-    padding: 8px
-    z-index: 1
-
-
-  &__title
-    font-size: 30px
-    font-weight: 300
-    padding: 0
-    margin: 0
-    color: #fff
-    +text-shadow(0 0 20px rgba(0,0,0,1))
-
-    +min-screen($screen-sm)
-      font-size: 24px
-
-    +min-screen($screen-md)
-      font-size: 37px
-
-    +min-screen($screen-lg)
-      font-size: 42px
-
-// END Section Box
-
-// Banner Product
-.banner-product
-  position: relative
 
   +max-screen($screen-sm)
-    background: url("images/home/banner-background-responsive.png") top center no-repeat
+    padding: 40px 20px 60px 20px
+
+// END Big Footer
 
 
-  &__background
-    position: relative
-    z-index: 1
-    width: 100%
 
-    +max-screen($screen-sm)
-      display: none
-
-  &__image-container
-    position: absolute
-    top: 0
-    left: 0
-    z-index: 2
-    width: 46%
-    height: 100%
-    padding: 20px 0 10px 0
-
-    +max-screen($screen-sm)
-      position: relative
-      width: 100%
-      text-align: center
-
-
-  &__container
-    position: absolute
-    top: 0
-    left: 46%
-    width: 46%
-    z-index: 2
-
-    +max-screen($screen-sm)
-      position: relative
-      width: 90%
-      left: 5%
-      text-align: center
-
-
-  &__product
-    position: relative
-    height: 100%
-    left: 50%
-
-    +max-screen($screen-sm)
-      left: auto
-      height: 250px
-
-
-  &__title
-    font-size: 32px
-    color: #000
-    font-weight: 700
-    margin: 10% 0 0 0
-    padding: 0
-
-    +min-screen($screen-sm)
-      font-size: 24px
-      margin: 5% 0 0 0
-
-    +min-screen($screen-md)
-      margin: 8% 0 0 0
-
-    +min-screen($screen-xl)
-      font-size: 30px
-      margin: 12% 0 0 0
-
-  &__description
-    font-size: 14px
-    color: #000
-    font-weight: 300
-    margin: 0
-    padding: 0
-
-    +min-screen($screen-sm)
-      font-size: 16px
-      line-height: 16px
-      margin-bottom: 10px
-
-    +min-screen($screen-md)
-      font-size: 20px
-      line-height: 24px
-
-    +min-screen($screen-lg)
-      font-size: 20px
-      line-height: 30px
-      margin-bottom: 20px
-
-    +min-screen($screen-xl)
-      font-size: 24px
-      line-height: 32px
-      margin-bottom: 20px
-
-// END Banner Product
