--- a/app/assets/stylesheets/patterns/patterns.sass
+++ b/app/assets/stylesheets/patterns/patterns.sass
@@ -1,3 +1,8 @@
+.site-container
+  position: relative
+  z-index: 1
+  background: #FFFFFF
+
 // Buttons
 .btn-follow
   +transition(all .3s ease-out)
@@ -10,7 +15,7 @@
   line-height: 22px
   text-decoration: none
   text-align: center
-  width: 200px
+  width: 220px
 
   +max-screen($screen-sm)
     font-size: 14px
