--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -1,4 +1,4 @@
-@import url(https://fonts.googleapis.com/css?family=Titillium+Web:400,200,300,600,700);
+@import url(https://fonts.googleapis.com/css?family=Titillium+Web:400,200,300,600,700)
 @import font-awesome
 @import sass-mediaqueries/media-queries
 @import modules/mixins
