--- a/app/assets/stylesheets/components/banner-product.sass
+++ b/app/assets/stylesheets/components/banner-product.sass
@@ -38,8 +38,8 @@
 
     +max-screen($screen-sm)
       position: relative
-      width: 90%;
-      left: 5%;
+      width: 90%
+      left: 5%
       text-align: center
 
 
