--- a/app/assets/stylesheets/components/navigation.sass
+++ b/app/assets/stylesheets/components/navigation.sass
@@ -70,3 +70,80 @@
         margin-bottom: 12px
         text-decoration: none
 
+.nav-languages
+  position: absolute
+  z-index: 5
+
+  &__list
+    .world
+      color: #fff
+      font-size: 25px
+      display: block
+      width: 25px
+      height: 25px
+
+
+    li
+      list-style: none
+      display: inline-block
+
+      &.active,
+      &:hover
+        a
+          color: #fff
+      a
+        color: #c9cbcb
+        text-decoration: none
+
+  // regole per il responsive
+  +max-screen($screen-sm)
+    &
+      text-align: left
+
+    &__list
+      display: none
+
+    .toogler
+      padding: 20px 0 0 43px
+
+      a
+        display: block
+        color: #fff
+        font-size: 25px
+
+    .open
+      display: block
+      margin: 0px
+
+      li
+        display: block !important
+        font-size: 15px
+        text-align: center
+        background: rgba(black, 0.5)
+        padding: 5px
+
+        &:nth-child(2)
+          border-top: 1px solid #fff
+          border-bottom: 1px solid #fff
+
+    li
+      display: none
+
+  +min-screen($screen-sm)
+    &
+      .world
+        display: none
+
+      li
+        &:nth-child(2)
+          &::after,
+          &::before
+            display: block
+            content: "-"
+            margin: 0px 4px
+            display: inline-block
+            color: #c9cbcb
+
+
+
+
