--- a/app/assets/stylesheets/components/footer.sass
+++ b/app/assets/stylesheets/components/footer.sass
@@ -19,11 +19,18 @@
   &__nav
     list-style: none
     text-align: center
+    padding: 0
 
     li
       position: relative
       display: inline-block
       margin-right: 10px
+
+      +max-screen($screen-sm)
+        display: block
+        margin: 0 auto
+        width: 100%
+
 
       a
         +transition(all .4s ease-out)
@@ -46,6 +53,9 @@
         top: 6px
         position: absolute
         margin-left: 6px
+
+        +max-screen($screen-sm)
+          display: none
 
 
 // END Footer
