Not include sticky in home

--- a/app/views/mockup/_navigation.html.erb
+++ b/app/views/mockup/_navigation.html.erb
@@ -1,4 +1,4 @@
-<div class="navigations navigations--sticky">
+<div class="navigations <%= "navigations--sticky" if local_assigns[:sticky] %>">
   <div class="nav-languages">
     <div class="toogler">
       <a class="world js-world-toggler" href="#"><i class="fa fa-globe"></i></a>
