--- a/app/views/mockup/home.html
+++ b/app/views/mockup/home.html
@@ -1,9 +1,9 @@
-<%= render "responsive_menu" %>
+<%= render partial: "responsive_menu" %>
 <div class="site-container">
   <div class="container-fluid js_site_container js_main controller">
     <div class="row">
       <div class="col-md-12">
-        <%= render "navigation" %>
+        <%= render partial: "navigation" %>
         <!-- Splash -->
         <div class="splash">
           <div class="splash__content">
@@ -79,6 +79,6 @@
       <a href="#" class="btn-follow">SCOPRI DI PIÚ</a>
     </div>
   </div>
-  <%= render "big_footer" %>
-  <%= render "footer" %>
+  <%= render partial: "big_footer" %>
+  <%= render partial: "footer" %>
 </div>
