fix page products

--- a/app/views/mockup/products.html.erb
+++ b/app/views/mockup/products.html.erb
@@ -11,7 +11,7 @@
           <img data-fit="true" data-align="top center" class="coverized catalog-beer__background" src="<%= image_path 'catalog_beer/catalog_beer_splash.jpg' %>" alt="">
         </div>
 
-        <div class="wrapper" style="padding: 70px 0px">
+        <div class="wrapper">
           <div class="container">
             <div class="row">
 
