--- a/app/assets/stylesheets/components/components.sass
+++ b/app/assets/stylesheets/components/components.sass
@@ -6,6 +6,8 @@
 @import footer
 @import cart-small
 @import product-catalog
+@import product-images
+@import product-details
 
 // Nav Languages
 .nav-languages
