--- a/app/assets/stylesheets/components/navigation.sass
+++ b/app/assets/stylesheets/components/navigation.sass
@@ -24,6 +24,20 @@
     height: 80px
     background: #46521b
 
+    .navigations__forst-shop
+      position: absolute
+      margin: 10px auto
+      display: block
+      width: 180px
+      height: 60px
+      background: red
+      background: url(asset-path("home/splash-logo.png")) center center no-repeat
+      background-size: 100%
+      left: 50%
+      margin-left: -90px
+      overflow: hidden
+      text-indent: -999999px
+
 .navigation
   +transition(all .5s cubic-bezier(1.000, 0.145, 0.395, 1.005))
   position: fixed
