--- a/app/views/mockup/_navigation.html.erb
+++ b/app/views/mockup/_navigation.html.erb
@@ -1,4 +1,5 @@
 <div class="navigations <%= "navigations--sticky" if local_assigns[:sticky] %>">
+  <a href="#" title="Home" class="navigations__forst-shop"></a>
   <div class="nav-languages">
     <div class="toogler">
       <a class="world js-world-toggler" href="#"><i class="fa fa-globe"></i></a>
@@ -9,7 +10,7 @@
       <li><a href="#">EN</a></li>
     </ul>
   </div>
-  <div class="cart-small">
+  <div class="cart-small hidden-xs">
     <a href="#">
       <i class="fa fa-shopping-cart"></i>
       <p>0/€0.00</p>
