--- a/app/views/mockup/_responsive_menu.html.erb
+++ b/app/views/mockup/_responsive_menu.html.erb
@@ -5,6 +5,7 @@
     </a>
   </div>
   <ul class="navigation__primary-menu">
+    <li><a href="#">CARRELLO (0/€0.00)</a></li>
     <li><a href="#">FORST SHOP</a></li>
     <li><a href="#">LE NOSTRE BIRRE</a></li>
     <li>
