--- a/app/views/mockup/home.html
+++ b/app/views/mockup/home.html
@@ -39,13 +39,13 @@
         <div class="col-sm-4 col-md-4">
           <!-- Section-box -->
           <div class="section-box">
-            <a class="section-box__link" href="#" class="Le nostre birre">
-              <img class="section-box__image" src="<%= image_path 'home/box-birre-background.png' %>" alt="" />
-              <div class="section-box__content">
+            <!-- <a class="section-box__link" href="#" class="Le nostre birre"> -->
+              <img class="section-box__image" src="<%= image_path 'home/coming-soon.png' %>" alt="" />
+              <!-- <div class="section-box__content">
                 <img class="section-box__icon" src="<%= image_path 'home/box-birre-icon.png' %>" alt="" />
                 <h1 class="section-box__title">Le nostre birre</h1>
-              </div>
-              </a>
+              </div>-->
+            <!-- </a> -->
           </div>
           <!-- // Section-box -->
         </div>
