--- a/app/views/mockup/scheda-prodotto.html.erb
+++ b/app/views/mockup/scheda-prodotto.html.erb
@@ -1,19 +1,70 @@
 <%= render partial: "responsive_menu" %>
 <!-- // Navigation -->
 <div class="site-container">
+
   <div class="container-fluid js_site_container js_main controller">
     <div class="row">
       <div class="col-md-12">
         <%= render partial: "navigation", locals: { sticky: true } %>
+      </div>
+    </div>
+  </div>
 
-        <br />
-        <br />
-        <br />asdfasdf
-        <br />
-        <br />
-        <br />
-        <br />
+  <div class="wrapper">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-6 col-sm-6">
 
+          <div id="product-images" class="product-images" data-hook="product_images">
+            <div id="main-image" data-hook="">
+              <img itemprop="image" src="<%= image_path 'product/product-555x344.png' %>" alt="">
+            </div>
+            <div id="thumbnails" data-hook="">
+              <ul id="product-thumbnails" class="thumbnails" data-hook="">
+                <li class="tmb-all tmb-1 selected">
+                  <a href="#"><img src="<%= image_path 'product/product-165x165.png' %>" alt="Ror tote"></a>
+                </li>
+                <li class="tmb-all tmb-1">
+                  <a href="#"><img src="<%= image_path 'product/product-165x165.png' %>" alt="Ror tote back"></a>
+                </li>
+                <li class="tmb-all tmb-1">
+                  <a href="#"><img src="<%= image_path 'product/product-165x165.png' %>" alt="Ror tote back"></a>
+                </li>
+              </ul>
+            </div>
+          </div>
+
+        </div>
+
+        <div class="col-md-5 col-md-offset-1 col-sm-6">
+          <div class="product-details">
+            <h1 class="product-details__title">Birra di Natale Forst 2l</h1>
+            <p class="product-details__price">25 €</p>
+            <h2 class="product-details__subtitle">DESCRIZIONE</h2>
+            <p class="product-details__description">
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+              tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+              quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+              consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+              cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+              proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+            </p>
+            <ul class="product-details__attributes">
+                <li class="product-details__attributes__item">
+                  <h3>Quiid</h3>
+                  <p>hic quaerat ut eius dolorem minima</p>
+                </li>
+                <li class="product-details__attributes__item">
+                  <h3>Quiid</h3>
+                  <p>hic quaerat ut eius dolorem minima</p>
+                </li>
+                <li class="product-details__attributes__item">
+                  <h3>Quiid</h3>
+                  <p>hic quaerat ut eius dolorem minima</p>
+                </li>
+            </ul>
+          </div>
+        </div>
       </div>
     </div>
   </div>
