--- a/app/assets/stylesheets/patterns/patterns.sass
+++ b/app/assets/stylesheets/patterns/patterns.sass
@@ -3,6 +3,10 @@
   z-index: 1
   background: #FFFFFF
 
+.wrapper
+  padding: 70px 0
+  background: #f6f2ee url(asset-path("pattern.png")) left top
+
 // Buttons
 .btn-follow
   +transition(all .3s ease-out)
