--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -26,7 +26,7 @@
         <div class="col-sm-4 col-md-4">
           <!-- Section-box -->
           <div class="section-box">
-            <a class="section-box__link" href="#" class="Il merchandising">
+            <a class="section-box__link" href="<%= shop_merchandising_path %>" title="Il merchandising">
               <img class="section-box__image" src="<%= image_path 'home/box-merchandising-background.png' %>" alt="" />
               <div class="section-box__content">
                 <img class="section-box__icon" src="<%= image_path 'home/box-merchandising-icon.png' %>" alt="" />
@@ -39,7 +39,7 @@
         <div class="col-sm-4 col-md-4">
           <!-- Section-box -->
           <div class="section-box">
-            <!-- <a class="section-box__link" href="#" class="Le nostre birre"> -->
+            <!-- <a class="section-box__link" href="<%= shop_beers_path %>" title="Le nostre birre"> -->
               <img class="section-box__image" src="<%= image_path 'home/coming-soon.png' %>" alt="" />
               <!-- <div class="section-box__content">
                 <img class="section-box__icon" src="<%= image_path 'home/box-birre-icon.png' %>" alt="" />
@@ -52,7 +52,7 @@
         <div class="col-sm-4 col-md-4">
           <!-- Section-box -->
           <div class="section-box">
-            <a class="section-box__link" href="#" class="La birra di Natale">
+            <a class="section-box__link" href="<%= shop_christmas_beer_path %>" title="La birra di Natale">
               <img class="section-box__image" src="<%= image_path 'home/box-birra-natale-background.png' %>" alt="" />
               <div class="section-box__content">
                 <img class="section-box__icon" src="<%= image_path 'home/box-birra-natale-icon.png' %>" alt="" />
