Dynamic links in home & responsive menu, cart link in JS

--- a/app/views/application/_navigation.html.erb
+++ b/app/views/application/_navigation.html.erb
@@ -11,10 +11,10 @@
     </ul>
   </div>
   <div class="cart-small hidden-xs">
-    <a href="#">
+    <a href="<%= spree.cart_path %>">
       <i class="fa fa-shopping-cart"></i>
-      <p>0/€0.00</p>
     </a>
+    <span class="js-inject-link-to-cart"></span>
   </div>
   <div class="js-nav-toggler">
     <a class="navigation-toggler" href="#">
