--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -76,7 +76,7 @@
       <p class="banner-product__description">
         La dodicesima edizione della Birra di Natale, disponibile nell’elegante bottiglia da 2 litri a forma di sifone. Per la prima volta in vetro, raffigura lo stabilimento di Birra FORST in veste natalizia.
       </p>
-      <a href="#" class="btn-follow">SCOPRI DI PIÚ</a>
+      <a href="<%= shop_christmas_beer_path %>" class="btn-follow">SCOPRI DI PIÚ</a>
     </div>
   </div>
   <%= render partial: "big_footer" %>
