--- a/app/views/application/_responsive_menu.html.erb
+++ b/app/views/application/_responsive_menu.html.erb
@@ -5,21 +5,39 @@
     </a>
   </div>
   <ul class="navigation__primary-menu">
-    <li><a href="#">CARRELLO (0/€0.00)</a></li>
-    <li><a href="#">FORST SHOP</a></li>
-    <li><a href="#">LE NOSTRE BIRRE</a></li>
+    <li class="visible-xs js-inject-link-to-cart"></li>
+    <li><a href="<%= root_path %>">
+      FORST SHOP
+    </a></li>
+    <li><a href="<%= shop_beers_path %>">
+      LE NOSTRE BIRRE
+    </a></li>
     <li>
-      <a href="#">IL MERCHANDISING</a>
+      <a href="<%= shop_merchandising_path %>">
+        IL MERCHANDISING
+      </a>
       <ul>
-        <li><a href="#">BICCHIERI</a></li>
-        <li><a href="#">ABBIGLIAMENTO</a></li>
-        <li><a href="#">ACCESSORI</a></li>
+        <li><a href="<%= shop_merchandising_path :glasses %>">
+          BICCHIERI
+        </a></li>
+        <li><a href="<%= shop_merchandising_path :clothing %>">
+          ABBIGLIAMENTO
+        </a></li>
+        <li><a href="<%= shop_merchandising_path :accessories %>">
+          ACCESSORI
+        </a></li>
       </ul>
     </li>
   </ul>
   <ul class="navigation__secondary-menu">
-    <li><a href="#">Contatti</a></li>
-    <li><a href="#">Informativa privacy</a></li>
-    <li><a href="#">Condizioni generali di vendita</a></li>
+    <li><a href="<%=  %>">
+      Contatti
+    </a></li>
+    <li><a href="<%=  %>">
+      Informativa privacy
+    </a></li>
+    <li><a href="<%=  %>">
+      Condizioni generali di vendita
+    </a></li>
   </ul>
 </div>
