--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -1,5 +1,6 @@
 @import url(https://fonts.googleapis.com/css?family=Titillium+Web:400,200,300,600,700)
 @import font-awesome
+@import fonts/fontello/fontello-embedded
 @import sass-mediaqueries/media-queries
 @import modules/mixins
 @import modules/variables
