Change fondello icon

--- a/app/views/application/_navigation.html.erb
+++ b/app/views/application/_navigation.html.erb
@@ -12,7 +12,7 @@
   </div>
   <div class="cart-small hidden-xs">
     <a href="<%= spree.cart_path %>">
-      <i class="fa fa-shopping-cart"></i>
+      <i class="icon-cart"></i>
     </a>
     <span class="js-inject-link-to-cart"></span>
   </div>
