--- a/app/assets/stylesheets/components/product-details.sass
+++ b/app/assets/stylesheets/components/product-details.sass
@@ -1,6 +1,25 @@
 .product-details
   margin: 0 15px
 
+  .btn-add-to-cart, .product-details__stepper
+    display: inline-block !important
+
+  &__selector
+    width: 100%
+    display: block
+    clear: both
+    margin-bottom: 30px
+
+  &__stepper
+    width: 60px
+    text-align: center
+    padding: 10px 12px
+    border: 1px solid #e6e6e6
+
+    +max-screen($screen-sm)
+      padding: 5px 12px
+
+
   &__title
     font-weight: 400
     font-size: 35px
@@ -11,8 +30,12 @@
     clear: both
 
     +max-screen($screen-sm)
-      padding-top: 40px
-
+      padding-top: 14px
+      font-size: 26px
+      line-height: 1
+      text-align: center
+      font-weight: 700
+      margin-top: 14px
 
   &__subtitle
     font-weight: 200
@@ -30,6 +53,12 @@
     border-left: 0
     border-right: 0
     float: left
+
+    +max-screen($screen-sm)
+      float: none
+      display: block
+      margin: 10px auto
+      text-align: center
 
   &__description
     font-weight: 200
