--- a/app/assets/stylesheets/components/product-images.sass
+++ b/app/assets/stylesheets/components/product-images.sass
@@ -4,19 +4,26 @@
     img
       border: 1px solid #e6e6e6
       width: 100%
+      display: block
 
 ul.thumbnails
-  margin: 0
+  margin: 20px 0 0 0
   padding: 0
   list-style: none
   display: block
   height: 100px
+
+  +max-screen($screen-sm)
+    margin: 10px 10px 0 10px
 
   li.tmb-all, li.tmb-1
     float: left
     padding: 0 15px
     margin: 0
     width: 33.33333333%
+
+    +max-screen($screen-sm)
+      padding: 0 5px
 
     a
       margin: 0
