--- a/app/views/mockup/scheda-prodotto.html.erb
+++ b/app/views/mockup/scheda-prodotto.html.erb
@@ -40,6 +40,13 @@
           <div class="product-details">
             <h1 class="product-details__title">Birra di Natale Forst 2l</h1>
             <p class="product-details__price">25 €</p>
+
+            <div class="product-details__selector product-details__selector--inline">
+              <input class="product-details__stepper" type="number" min="1" max="10" value="5" />
+              <a href="#" class="btn-add-to-cart">Aggiungi al carrello</a>
+            </div>
+
+
             <h2 class="product-details__subtitle">DESCRIZIONE</h2>
             <p class="product-details__description">
               Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
