--- a/app/views/application/_big_footer.html.erb
+++ b/app/views/application/_big_footer.html.erb
@@ -4,16 +4,22 @@
       <div class="col-sm-4">
         <ul class="menu-list">
           <li class="title">Categorie</li>
-          <li><a href="#">Il merchandising</a></li>
-          <li><a href="#">Le nostre birre</a></li>
-          <li><a href="#">La birra di Natale</a></li>
+          <li><a href="<%= shop_beers_path %>">
+            Le nostre birre
+          </a></li>
+          <li><a href="<%= shop_merchandising_path %>">
+            Il merchandising
+          </a></li>
+          <li><a href="<%= shop_christmas_beer_path %>">
+            La birra di Natale
+          </a></li>
         </ul>
       </div>
       <div class="col-sm-4">
         <ul class="menu-list">
           <li class="title">CONTATTI</li>
-          <li><a href="#">www.forst.it</a></li>
-          <li><a href="#">shop@forst.it</a></li>
+          <li><a href="http://www.forst.it/">www.forst.it</a></li>
+          <li><a href="mailto:shop@forst.it">shop@forst.it</a></li>
           <li>+39 0473 260 360</li>
           <li>
             <br /> Via Venosta, 11
@@ -25,7 +31,8 @@
         <ul class="menu-list">
           <li class="title">SEGUICI</li>
           <li class="menu-list__social">
-            <a href="#"><i class="fa fa-facebook"></i></a><a href="#"><i class="fa fa-youtube"></i></a>
+            <a href="#"><i class="fa fa-facebook"></i></a>
+            <a href="#"><i class="fa fa-youtube"></i></a>
           </li>
         </ul>
       </div>
