--- a/app/assets/stylesheets/components/components.sass
+++ b/app/assets/stylesheets/components/components.sass
@@ -9,6 +9,7 @@
 @import product-images
 @import product-details
 @import product-merchandising
+@import contacts
 
 // Nav Languages
 .nav-languages
