creation thx page

--- a/app/assets/stylesheets/components/contacts.sass
+++ b/app/assets/stylesheets/components/contacts.sass
@@ -70,4 +70,16 @@
     &:hover
       color: lighten(#333, 2%)
 
+.back-home
+  text-align: center
+
+  a
+    font-weight: 700
+    font-size: 14px
+    color: #000000
+    background: #fff
+    padding: 7px 12px
+    border: 1px solid #dad8ca
+    text-decoration: none
+
 
